--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,5 +1,5 @@
+<h1>Cart</h1>
 {% if cart.item_count > 0 %}
-  <h1>cart</h1>
   <form action="/cart" method="post" novalidate>
     <table>
       <thead>
@@ -41,6 +41,5 @@
     </div>
   </form>
 {% else %}
-  <h2>cart</h2>
   Cart is empty
 {% endif %}
