--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,45 +1,60 @@
 {% assign mainProduct = all_products['fitra'] %}
 
-<h1>{{ mainProduct.title }}</h1>
-
-<div id="product-images">
-  {% for image in mainProduct.images %}
-    <div id="single-product-image">
-      <img src="{{ image | | img_url: 'large' }}" alt="product_img" />
+<div id="page-index">
+  <div id="product-images" class="sticky-side-image">
+    {% for image in mainProduct.images %}
+      <div class="single-product-image">
+        <img src="{{ image | | img_url: 'x1440' }}" alt="product_img" />
+      </div>
+    {% endfor %}
+  </div>
+  
+  <div id="product-info" class="main-content grid">
+    <div class="valign-center">
+      <h1 class="headline-big">{{ mainProduct.title | | remove: ' Pro Fitness Tracker' }}</h1>
     </div>
-  {% endfor %}
+      <!-- info grid -->
+      <div id="info-grid-content" class="grid two-columns">
+        <div class="headline valign-bottom">
+          <h2>{{ 'product.copy.headline' | t }}</h2>
+        </div>
+        <div class="description">
+          <h3>{{ 'product.copy.description_headline' | t }}</h3>
+          <div class="description-content">
+            {{ mainProduct.description }}
+          </div>
+        </div>
+        <div class="details">
+          <ul class="list-with-stroke">
+            <li>{{ 'product.details_list.item1' | t }}</li>
+            <li>{{ 'product.details_list.item2' | t }}</li>
+          </ul>
+        </div>
+        <!-- product varient form -->
+        <div class="from-wrapper">
+          <form action="/cart/add" method="post" enctype="multipart/form-data" id="add-to-cart-form">
+            <label for="productSelect">{{ mainProduct.options.first }}</label>
+            <div class="styled-select">
+              <select name="id" id="productSelect">
+                {% for variant in mainProduct.variants %}
+                  <option value="{{variant.id}}">{{ variant.title }}</option>
+                {% endfor %}
+              </select>
+              <div class="select-arrow">
+                <img src="{{ 'icon-arrow-down.svg' | | asset_url}}" alt="down-arrow">
+              </div>
+            </div>
+            <button type="submit" name="add" id="add-to-cart-button">
+              {{ 'product.form.submit' | t }}
+              <span class="product-price"> {{ mainProduct.price | | | money_without_trailing_zeros }} </span>
+            </button>
+          </form>
+        </div>
+      </div>
+  </div>
+  
 </div>
 
-<div id="product-info">
-    <div class="headline">
-      <h2>{{ 'product.copy.headline' | t }}</h2>
-    </div>
-    <div class="description">
-      <h3>{{ 'product.copy.description_headline' | t }}</h3>
-      {{ mainProduct.description }}
-    </div>
-    <div class="details">
-      <ul>
-        <li>{{ 'product.details_list.item1' | t }}</li>
-        <li>{{ 'product.details_list.item2' | t }}</li>
-      </ul>
-    </div>
-    <!-- product varient form -->
-    <div class="from-wrapper">
-      <form action="/cart/add" method="post" enctype="multipart/form-data" id="AddToCartForm">
-        <label for="productSelect">{{ mainProduct.options.first }}</label>
-        <select name="id" id="productSelect">
-          {% for variant in mainProduct.variants %}
-            <option value="{{variant.id}}">{{ variant.title }}</option>
-          {% endfor %}
-        </select>
-        <button type="submit" name="add" id="AddToCart">
-          {{ 'product.form.submit' | t }}
-          <span class="product-price"> {{ mainProduct.price | | | money_without_trailing_zeros }} </span>
-        </button>
-      </form>
-    </div>
-</div>
 
 
 <!-- {% for product in collections.frontpage.products limit:4 %}
